; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wimax/i2400m/extr_tx.c___i2400m_tx_tail_room.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wimax/i2400m/extr_tx.c___i2400m_tx_tail_room.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2400m = type { i64 }

@I2400M_TX_BUF_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.i2400m*)* @__i2400m_tx_tail_room to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @__i2400m_tx_tail_room(%struct.i2400m* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.i2400m*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.i2400m* %0, %struct.i2400m** %3, align 8
  %6 = load %struct.i2400m*, %struct.i2400m** %3, align 8
  %7 = getelementptr inbounds %struct.i2400m, %struct.i2400m* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = call i64 @unlikely(i64 %8)
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i64, i64* @I2400M_TX_BUF_SIZE, align 8
  store i64 %12, i64* %2, align 8
  br label %26

13:                                               ; preds = %1
  %14 = load %struct.i2400m*, %struct.i2400m** %3, align 8
  %15 = getelementptr inbounds %struct.i2400m, %struct.i2400m* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @I2400M_TX_BUF_SIZE, align 8
  %18 = urem i64 %16, %17
  store i64 %18, i64* %5, align 8
  %19 = load i64, i64* @I2400M_TX_BUF_SIZE, align 8
  %20 = load i64, i64* %5, align 8
  %21 = sub i64 %19, %20
  store i64 %21, i64* %4, align 8
  %22 = load i64, i64* @I2400M_TX_BUF_SIZE, align 8
  %23 = load i64, i64* %4, align 8
  %24 = urem i64 %23, %22
  store i64 %24, i64* %4, align 8
  %25 = load i64, i64* %4, align 8
  store i64 %25, i64* %2, align 8
  br label %26

26:                                               ; preds = %13, %11
  %27 = load i64, i64* %2, align 8
  ret i64 %27
}

declare dso_local i64 @unlikely(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
